# dotfiles.v5.nix

./: .crush.md  .cursorrules  .gitignore  .sops.yaml  AGENTS.md  OVMF_VARS.fd  README.md  drives.txt  error.txt  flake.nix  globals.nix  justfile  output.txt  schemas.nix  stats.json  test-eval.nix  test-options.nix  test.nix  topology.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
discovery/: default.nix  deploy.nix  fs.nix  home.nix  meta.nix  modules.nix  nixos.nix  overlays.nix  packages.nix  paths.nix  users.nix
docs/: SUMMARY.md  audio.md  backup-manager.md  bluetooth.md  book.toml  bootloader.md  cache-server.md  cache.md  caelestia-shell.md  caelestia.md  containers.md  dashboard.md  desktop-apps.md  desktops.md  disks.md  docs.md  dotfiles-sync.md  dotfiles.md  downloads.md  file-browser.md  file-sharing.md  fish.md  flatpak.md  gaming.md  gitea-runner.md  gitea.md  gog-downloader.md  harmonia-cache.md  home-modules.md  hosts.md  hyprland.md  hyprlauncher.md  hyprpaper.md  incus.md  kdeconnect.md  kitty.md  kmscon.md  lib.md  localization.md  main-diagram.md  (+37 more)
home/: tod@Jade.nix  tod@Onix.nix  tod@Ruby.nix  tod@Sapphire.nix
overlays/: tools.nix
parts/: discovery.nix  discovery.nix.old  discovery.v2.nix  docs-service.nix  docs.nix  schemas.nix  shells.nix
profiles/: base.nix  limine-uefi.nix  (+2 more)
templates/python-rust-uv/: .gitignore  Cargo.toml  README.md  flake.nix  justfile  pyproject.toml
templates/python-rust-uv/app/: main.py
templates/python-rust-uv/src/: lib.rs
(+516 files in other folders)
