[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "python-rust-project"
version = "0.1.0"
description = "Python project with Rust extensions managed by maturin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "core"
